# tmag5273

./: .gitignore  .gitmodules  .markdownlint.json  .markdownlint.yaml  .mega-linter.yaml  .mega-linter.yml  .textlintrc.json  CONTRIBUTING.md  Cargo.toml  README.md  ReadMe.md
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/test_bench/: README.md  docker-compose.yaml
.github/workflows/: Linting.yaml  Linting.yml  continuous_build.yaml  continuous_integration.yaml  dependabot.yaml  mega-linter.yaml  mega-linter.yml  release.yaml  tmag5273-security.yml
continous integration/: README.md  docker-compose.yaml
docs/: architecture.puml
docs/continuous integration/: Continuous Testing Pipeline.canvas
docs/examples/: Multi Platform Driver.canvas
examples/: README.md  ReadMe.md  example_1_basic_readings.rs  example_2_interrupts.rs  example_3_angle_calculations.rs  example_4_i2c_settings.rs
examples/esp32-c3/: .gitignore  Cargo.toml
examples/esp32-c3/.cargo/: config.toml
examples/esp32-c3/src/: main.rs
examples/esp32c3/: Cargo.toml
examples/esp32c3/src/: main.rs
src/: config.rs  lib.rs  registers.rs  types.rs
src/registers/: configs.rs  conversion_status.rs  device_config_1.rs  device_config_2.rs  device_id.rs  device_status.rs  i2c_address.rs  interrupt_config.rs  register_map.rs  sensor_config_1.rs  sensor_config_2.rs  temperature_config.rs
src/tests/: README.md  cold_start_tests.rs  generic_cold_start_tests.rs  generic_setting_registers_tests.rs  linux.rs  linux_settting_registers_test.rs  mod.rs  setting_registers_tests.rs
src/tests/linux/: cold_start_tests.rs
tests/: Cargo.toml  README.md  linux.rs
tests-common/: Cargo.toml  README.md
tests-common/src/: generic_cold_start_tests.rs  generic_setting_registers_tests.rs  lib.rs
tests/common/: generic_setting_registers_tests.rs
tests/esp32-c3/: Cargo.toml
tests/esp32-c3/.cargo/: config.toml
tests/esp32-c3/tests/: cold_start_tests.rs
tests/esp32c3/: Cargo.toml  README.md  build.rs
tests/esp32c3/.cargo/: config.toml
tests/esp32c3/src/: lib.rs  main.rs
tests/esp32c3/tests/: cold_start_tests.rs  example_test.rs  setting_register_tests.rs
tests/linux/: cold_start_tests.rs  setting_registers_tests.rs
tests/pipico/: Cargo.toml  README.md  build.rs
tests/pipico/.cargo/: config.toml
tests/pipico/src/: lib.rs
tests/pipico/tests/: cold_start_tests.rs  setting_register_tests.rs
tests/rppico/: Cargo.toml
tests/rppico/.cargo/: config.toml
tests/rppico/tests/: setting_register_tests.rs
tests/src/: generic_cold_start_tests.rs  lib.rs
tests/src/linux/: cold_start_tests.rs  setting_registers_test.rs
tests/stm32f072/: Cargo.toml  README.md  build.rs
tests/stm32f072/.cargo/: config.toml
tests/stm32f072/src/: lib.rs
tests/stm32f072/tests/: cold_start_tests.rs  cold_start_tests_0.rs  cold_start_tests_1.rs  cold_start_tests_2.rs  setting_register_tests.tzt  setting_register_tests_0.rs
utils/: Cargo.toml  README.md  ReadMe.md
utils/src/: lib.rs
