[package]
name = "utils"
version = "0.1.0" #TODO:: Figure out how to set this dynamically
edition = "2021"
authors = [
    "Scott Gibb <scott.gibb@dyson.com",
    "Pete Kubiak <pete.kubiak@dyson.com>",
    "James Sizeland <james.sizeland@dyson.com>",
]
description = "Utilities for the TMAG5273 Driver, focusing on connecting the I2C Bus to desktop environments such as Linux and MacOS where there is no I2C Bus"
readme = "README.md"
keywords = ["i2c", "embedded-hal", "ft232"]
categories = ["embedded", "i2c"]

[dependencies]
ftdi = "0.1.3"
rppal = { version = "0.19.0", features = ["hal"], optional = true }
ftdi-embedded-hal = { version = "0.22.0", features = [
    "libftd2xx",
    "libftd2xx-static",

], optional = true }

[features]
default = ["std"]

std = ["ftdi-embedded-hal"]
rpi = ["std", "rppal"]
