[package]
name = "esp32-c3"
version = "0.1.0"
authors = ["Scott Gibb <scott.gibb@dyson.com>"]
edition = "2021"

[dependencies]
embedded-hal = { version = "1.0.0" }
esp-backtrace = { version = "0.14.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.22.0", features = ["esp32c3"] }
esp-println = { version = "0.11.0", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }
tmag5273 = { path = "../../", features = ["log"] }

# [profile.dev]
# # Rust debug is too slow.
# # For debug builds always builds with some optimization
# opt-level = "s"

# [profile.release]
# codegen-units = 1        # LLVM can perform better optimizations using a single thread
# debug = 2
# debug-assertions = false
# incremental = false
# lto = 'fat'
# opt-level = 's'
# overflow-checks = false
