[package]
name = "esp32c3-example"
version = "0.1.0"
authors = [
    "Scott Gibb <scott.gibb@dyson.com",
    "Pete Kubiak <peter.kubiak@dyson.com>",
    "James Sizeland <james.sizeland@dyson.com>",
]
edition = "2021"

[dependencies]
tmag5273 = { path = "../../" }
embedded-hal = { version = "1.0.0" }
esp-backtrace = { version = "0.14.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }

esp-hal = { version = "0.23.1", features = ["esp32c3"] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }

[[bin]]
name = "esp32c3-example"
path = "src/main.rs"
test = false
doctest = false
bench = false

[workspace]
