[package]
name = "esp32-c3-tests"
version = "0.1.0"
authors = [
    "Scott Gibb <scott.gibb@dyson.com",
    "Pete Kubiak <peter.kubiak@dyson.com>",
    "James Sizeland <james.sizeland@dyson.com>",
]
edition = "2021"


[[test]]
name = "cold_start_tests"
harness=false


[dependencies]
tmag5273 = { path = "../../" }
# dependencies when using the log/defmt feature
log = { version = "0.4.20", optional = true }
defmt = { version = "0.3.8", optional = true }
rtt-target = { version = "0.6.1", optional = true }
# Esp32 related dependencies for main.rs. Note: embedded-test comes with its own panic handler and logging sink.
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.22.0", features = ["esp32c3"] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }


[dev-dependencies]
embedded-test = { version = "0.5.0"}


[features]
default = ["log"]
log = ["dep:log", "dep:rtt-target", "rtt-target/log", "embedded-test/log"]
defmt = ["dep:defmt", "dep:rtt-target", "rtt-target/defmt", "embedded-test/defmt"]