[package]
name = "esp32c3"
version = "0.1.0"
edition = "2021"


[dependencies]

# # dependencies for defmt
defmt = { version = "0.3.8", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }

# Esp32 related dependencies for main.rs. Note: embedded-test comes with its own panic handler and logging sink.
esp-hal = { version = "0.22.0", features = ["esp32c3"] }
esp-backtrace = { version = "0.14.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.12.0", default-features = false, features = ["esp32c3", "jtag-serial", "colors"] }
# Driver to be Tested
tmag5273 = { path = "../../" }

[dev-dependencies]
embedded-test = { version = "0.5.0" }

[features]
default = ["defmt"]
defmt = ["dep:defmt", "dep:defmt-rtt"]

[[bin]]
name = "esp32c3"
test = false  # To make plain `cargo test` work: Disable tests for the bin, because we are only using the intergration tests
bench = false # To make `cargo check --all-targets` work.

[lib]
test = false # Same as above, to make plain `cargo test` work instead of `cargo test --tests`
bench = false

# Test Files
[[test]]
name = "cold_start_tests"
harness = false

[workspace] # Required so that its not attached to main workspace
