[package]
name = "pipico"
version = "0.1.0"
edition = "2021"

[dependencies]
rp-pico = "0.9.0"
# dependencies for defmt
defmt = { version = "1.0.1"}
defmt-rtt = { version = "0.4.1"}
fugit = "0.3.7"
portable-atomic = {version = "1.7.0", features = ["critical-section"]}


[dev-dependencies]
embedded-test = { version = "0.6.0", features =["defmt"] }
tests-common = { path = "../../tests-common" }

# Test Files
[[test]]
name = "cold_start_tests"
harness = false

[[test]]
name = "setting_register_tests"
harness = false

[lib]
test = false
bench = false

[workspace] # Required so that its not attached to main workspace
