[package]
name = "rppico"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
rp2040-hal = "0.11.0"
# # dependencies for defmt
defmt = { version = "0.3.8"}
defmt-rtt = { version = "0.4.1"}
fugit = "0.3.7"
embedded_hal_0_2 = {package = "embedded-hal", version = "0.2.5", features = ["unproven"]}


[dev-dependencies]
embedded-test = { version = "0.5.0", features =["defmt"] }
tests-common = { path = "../../tests-common" }


# Test Files
[[test]]
name = "setting_register_tests"
harness = false

[workspace] # Required so that its not attached to main workspace
