[package]
name = "stm32f072"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.4.0", features = [ "defmt", "memory-x", "stm32f072rb"] }

cortex-m ={version ="0.7.0", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"
# dependencies for defmt
defmt = { version = "1.0.1"}
defmt-rtt = { version = "1.0.0"}
portable-atomic = {version = "1.10.0", features = ["critical-section"]}

[dev-dependencies]
embedded-test = { version = "0.6.0", features =["defmt"] }
tests-common = { path = "../../tests-common" }

# Test Files
[[test]]
name = "cold_start_tests_0"
harness = false

[[test]]
name = "cold_start_tests_1"
harness = false

[[test]]
name = "cold_start_tests_2"
harness = false

[[test]]
name = "setting_register_tests_0"
harness = false

[lib]
test = false # Same as above, to make plain `cargo test` work instead of `cargo test --tests`
bench = false

[workspace] # Required so that its not attached to main workspace

# Required to reduce binary size so that the tests compile on to the hardware. Required(=> rustc 1.84.0)
[profile.dev]
opt-level = 1